feature: Implementa funcao de deletar todo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="create_todo_list_page_title">ToDoList/Cadastrar Lista</string>
     <string name="detail_todo_list_page_title">ToDoList/Detalhes da Lista</string>
     <string name="create_todo_page_title">ToDoList/Cadastrar Tarefa</string>
+    <string name="detail_todo_page_title">ToDoList/Detalhes da Tarefa</string>
 
 
     <string name="todo_list_title_label">Título</string>
@@ -15,6 +16,7 @@
     <string name="todo_description_label">Descrição</string>
     <string name="todo_description_hint">Informe uma descrição</string>
     <string name="todo_priority_label">Prioridade?</string>
+    <string name="todo_finished_label">Tarefa concluida?</string>
     <string name="todo_priority_true_value">Sim</string>
     <string name="todo_priority_false_value">Não</string>
 
